Build/third-party-libraries/packages/nuget.org/system.threading/4.0.11/readme.md
System.Threading [4.0.11](https://www.nuget.org/packages/System.Threading/4.0.11)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides the fundamental synchronization primitives, including System.Threading.Monitor and System.Threading.Mutex, that are required when writing asynchronous code.

Commonly Used Types:
System.Threading.Monitor
System.Threading.SynchronizationContext
System.Threading.ManualResetEvent
System.Threading.AutoResetEvent
System.Threading.ThreadLocal<T>
System.Threading.EventWaitHandle
System.Threading.SemaphoreSlim
System.Threading.Mutex
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 0
-----------


*This page was generated by a tool.*